# samples

./: .gitignore
bigdata/datascience/mnist/: mnist_data.py  mnist_main.py  mnist_model.py  sample_logistic_regression.py  sklearn_kmean.py  sklearn_logistic_regression.py  sklearn_naive_bayes.py  tensorflow_keras_cnn.py
bigdata/spark/samples/: build.sbt
bigdata/tensorflow/keras/: image_classification.py  linear_regression.py
bigdata/tensorflow/samples/: linear_regression.py  moving_average.py  normal_distribution_regression.py  polynomial_regression.py
cpp/autoconf-sample/: configure.ac
cpp/gstreamer/tutorial/: README.md  basic-tutorial-1.c  run-video.sh
cpp/queue/: closable_queue_sample.cpp  queue_sample.cpp
cpp/sample/: CMakeLists.txt
cpp/sample/lib/: stacktrace.h  util.cpp  util.h
cpp/sample/src/: sample.cpp
cpp/sample/tests/: SampleUTest.h
cpp/static-linking/: build.sh
cpp/static-linking/include/: load_lib.h  load_lib1.h  load_lib2.h
cpp/static-linking/src/: load_lib.c  load_lib1.c  load_lib2.c  main.c
cpp/unresolved_symbols/: build.sh
cpp/unresolved_symbols/include/: resolved_lib.h  shared_lib.h  unresolved_lib.h
cpp/unresolved_symbols/src/: main.c  resolved_impl.c  shared_lib.c
experiments/turingmachine/: pom.xml
frameworks/java/springboot/: README.md
frameworks/micronaut/micronautguide/: build.gradle
gates/gates-kotlin/: build.gradle
java/design-patterns/: pom.xml
java/jmh/prime-numbers/: pom.xml
java/modularization/greetings/: run.sh
java/natural-lang/: .gitignore  pom.xml
java/serialization/: build.gradle
javafx/hello/: build.gradle
kotlin/coroutines/: build.gradle
kotlin/samples/src/: sample.ui.HelloWorld.kt
nodejs/http/sum/: server_sum.js
opengl/shapes/: CMakeLists.txt  shapes.c  triangle.c
others/rest/sparkjava-capitilize/: pom.xml
others/sql/sql-samples/: pom.xml
python/cython/hello/: main.py
scala/decompile/: build.sbt
scala/scala-lang/: build.sbt
scala/sort/: build.sbt
scala/spark/: build.sbt
web/grpc-java/: build.gradle
(+339 files in other folders)
